test/asm/impossible-bank.err
error: impossible-bank.asm(1):
    BANK only allowed for ROMX, WRAMX, SRAM, or VRAM sections
Assembly aborted with 1 error!
